Added more DSA examples