@@ -1,12 +1,13 @@
 package com.mb.tutorials;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class NumberTransformer {
 	
 	public static void main(String[] args) {
 		
-		List<Integer> list = List.of(1,2,3,4,5,6,7,8);
+		List<Integer> list = Arrays.asList(1,2,3,4,5,6,7,8);
 		
 		System.out.println(filterAndTransform2(list));
 		
