@@ -1,5 +1,6 @@
 package com.mb.tutorials;
 
+import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -9,7 +10,7 @@ public class RemoveDuplicateFromList {
 	public static void main(String[] args) {
 		
 		
-		List<Integer> list = List.of(1,2,1,2,3,4,5,6);
+		List<Integer> list = Arrays.asList(1,2,1,2,3,4,5,6);
 		
 		List<Integer> distinctElements = list.stream()
 		.collect(Collectors.groupingBy(num-> num, LinkedHashMap :: new, Collectors.counting()))
