@@ -1,5 +1,6 @@
 package com.mb.tutorials.student;
 
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -14,13 +15,13 @@ public class StudentSubjectImpl {
 	public static void main(String[] args) {
 
 		Student s1 = new Student("Ramesh",
-				List.of(new Subject("Maths", 98), new Subject("Physics", 94), new Subject("Chemistry", 90)));
+				Arrays.asList(new Subject("Maths", 98), new Subject("Physics", 94), new Subject("Chemistry", 90)));
 		Student s2 = new Student("Suresh",
-				List.of(new Subject("Maths", 94), new Subject("Physics", 95), new Subject("Chemistry", 91)));
+				Arrays.asList(new Subject("Maths", 94), new Subject("Physics", 95), new Subject("Chemistry", 91)));
 		Student s3 = new Student("Mahesh",
-				List.of(new Subject("Maths", 96), new Subject("Physics", 90), new Subject("Chemistry", 92)));
+				Arrays.asList(new Subject("Maths", 96), new Subject("Physics", 90), new Subject("Chemistry", 92)));
 
-		List<Student> students = List.of(s1, s2, s3);
+		List<Student> students = Arrays.asList(s1, s2, s3);
 
 		Comparator<Student> comparator = (student1, student2) -> {
 
